conclude monte carlo section

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,114 @@
 
+@inproceedings{benczur_feasibility_2005,
+	address = {New York, NY, USA},
+	series = {{WWW} '05},
+	title = {On the feasibility of low-rank approximation for personalized {PageRank}},
+	isbn = {978-1-59593-051-4},
+	url = {https://doi.org/10.1145/1062745.1062824},
+	doi = {10.1145/1062745.1062824},
+	abstract = {Personalized PageRank expresses backlink-based page quality around user-selected pages in a similar way to PageRank over the entire Web. Algorithms for computing personalized PageRank on the fly are either limited to a restricted choice of page selection or believed to behave well only on sparser regions of the Web. In this paper we show the feasibility of computing personalized PageRank by a k \&lt; 1000 low-rank approximation of the Page-Rank transition matrix; by our algorithm we may compute an approximate personalized Page-Rank by multiplying an n x k, a k x n matrix and the n-dimensional personalization vector. Since low-rank approximations are accurate on dense regions, we hope that our technique will combine well with known algorithms.},
+	urldate = {2025-04-20},
+	booktitle = {Special interest tracks and posters of the 14th international conference on {World} {Wide} {Web}},
+	publisher = {Association for Computing Machinery},
+	author = {Benczúr, András A. and Csalogány, Károly and Sarlós, Tamás},
+	year = {2005},
+	pages = {972--973},
+}
+
+@inproceedings{chen_local_2004,
+	address = {New York, NY, USA},
+	series = {{CIKM} '04},
+	title = {Local methods for estimating pagerank values},
+	isbn = {978-1-58113-874-0},
+	url = {https://doi.org/10.1145/1031171.1031248},
+	doi = {10.1145/1031171.1031248},
+	abstract = {The Google search engine uses a method called PageRank, together with term-based and other ranking techniques, to order search results returned to the user. PageRank uses link analysis to assign a global importance score to each web page. The PageRank scores of all the pages are usually determined off-line in a large-scale computation on the entire hyperlink graph of the web, and several recent studies have focused on improving the efficiency of this computation, which may require multiple hours on a workstation.However, in some scenarios, such as online analysis of link evolution and mining of large web archives such as the Internet Archive, it may be desirable to quickly approximate or update the PageRanks of individual nodes without performing a large-scale computation on the entire graph. We address this problem by studying several methods for efficiently estimating the PageRank score of a particular web page using only a small subgraph of the entire web. In our model, we assume that the graph is accessible remotely via a link database (such as the AltaVista Connectivity Server) or is stored in a relational database that performs lookups on disks to retrieve node and connectivity information. We show that a reasonable estimate of the PageRank value of a node is possible in most cases by retrieving only a moderate number of nodes in the local neighborhood of the node.},
+	urldate = {2025-04-20},
+	booktitle = {Proceedings of the thirteenth {ACM} international conference on {Information} and knowledge management},
+	publisher = {Association for Computing Machinery},
+	author = {Chen, Yen-Yu and Gan, Qingqing and Suel, Torsten},
+	month = nov,
+	year = {2004},
+	pages = {381--389},
+}
+
+@inproceedings{liao_efficient_2022,
+	address = {New York, NY, USA},
+	series = {{SIGMOD} '22},
+	title = {Efficient {Personalized} {PageRank} {Computation}: {A} {Spanning} {Forests} {Sampling} {Based} {Approach}},
+	isbn = {978-1-4503-9249-5},
+	shorttitle = {Efficient {Personalized} {PageRank} {Computation}},
+	url = {https://doi.org/10.1145/3514221.3526140},
+	doi = {10.1145/3514221.3526140},
+	abstract = {Computing the personalized PageRank vector is a fundamental problem in graph analysis. In this paper, we propose several novel algorithms to efficiently compute the personalized PageRank vector with a decay factor α based on an interesting connection between the personalized PageRank values and the weights of random spanning forests of the graph. Such a connection is derived based on a newly-developed matrix forest theorem on graphs. Based on this, we present an efficient spanning forest sampling algorithm via simulating loop-erased α-random walks to estimate the personalized PageRank vector. Compared to all existing methods, a striking feature of our approach is that its performance is insensitive w.r.t. (with respect to) the parameter α. As a consequence, our algorithm is often much faster than the state-of-the-art algorithms when α is small, which is the demanding case for many graph analysis tasks. We show that our technique can significantly improve the efficiency of the state-of-the-art algorithms for answering two well-studied personalized PageRank queries, including single source query and single target query. Extensive experiments on seven large real-world graphs demonstrate the efficiency of the proposed method.},
+	urldate = {2025-04-20},
+	booktitle = {Proceedings of the 2022 {International} {Conference} on {Management} of {Data}},
+	publisher = {Association for Computing Machinery},
+	author = {Liao, Meihao and Li, Rong-Hua and Dai, Qiangqiang and Wang, Guoren},
+	month = jun,
+	year = {2022},
+	pages = {2048--2061},
+}
+
+@article{das_sarma_fast_2015,
+	series = {Special {Issue} on {Distributed} {Computing} and {Networking}},
+	title = {Fast distributed {PageRank} computation},
+	volume = {561},
+	issn = {0304-3975},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304397514002709},
+	doi = {10.1016/j.tcs.2014.04.003},
+	abstract = {Over the last decade, PageRank has gained importance in a wide range of applications and domains, ever since it first proved to be effective in determining node importance in large graphs (and was a pioneering idea behind Google's search engine). In distributed computing alone, PageRank vector, or more generally random walk based quantities have been used for several different applications ranging from determining important nodes, load balancing, search, and identifying connectivity structures. Surprisingly, however, there has been little work towards designing provably efficient fully-distributed algorithms for computing PageRank. The difficulty is that traditional matrix–vector multiplication style iterative methods may not always adapt well to the distributed setting owing to communication bandwidth restrictions and convergence rates. In this paper, we present fast random walk-based distributed algorithms for computing PageRanks in general graphs and prove strong bounds on the round complexity. We first present a distributed algorithm that takes O(log⁡n/ϵ) rounds with high probability on any graph (directed or undirected), where n is the network size and ϵ is the reset probability used in the PageRank computation (typically ϵ is a fixed constant). We then present a faster algorithm that takes O(log⁡n/ϵ) rounds in undirected graphs. Both of the above algorithms are scalable, as each node sends only small (polylogn) number of bits over each edge per round. To the best of our knowledge, these are the first fully distributed algorithms for computing PageRank vector with provably efficient running time.},
+	urldate = {2025-04-20},
+	journal = {Theoretical Computer Science},
+	author = {Das Sarma, Atish and Molla, Anisur Rahaman and Pandurangan, Gopal and Upfal, Eli},
+	month = jan,
+	year = {2015},
+	keywords = {Distributed algorithm, Monte Carlo method, PageRank, Random walk},
+	pages = {113--121},
+}
+
+@article{avrachenkov_monte_2007,
+	title = {Monte {Carlo} {Methods} in {Pagerank} {Computation}: {When} {One} {Iteration} {Is} {Sufficient}},
+	volume = {45},
+	issn = {0036-1429},
+	shorttitle = {Monte {Carlo} {Methods} in {Pagerank} {Computation}},
+	url = {https://www.jstor.org/stable/40232890},
+	abstract = {PageRank is one of the principle criteria according to which Google ranks Web pages. PageRank can be interpreted as a frequency of visiting a Web page by a random surfer, and thus it reflects the popularity of a Web page. Google computes the PageRank using the power iteration method, which requires about one week of intensive computations. In the present work we propose and analyze Monte Carlo-type methods for the PageRank computation. There are several advantages of the probabilistic Monte Carlo methods over the deterministic power iteration method: Monte Carlo methods already provide good estimation of the PageRank for relatively important pages after one iteration; Monte Carlo methods have natural parallel implementation; and finally, Monte Carlo methods allow one to perform continuous update of the PageRank as the structure of the Web changes.},
+	number = {2},
+	urldate = {2025-04-20},
+	journal = {SIAM Journal on Numerical Analysis},
+	author = {Avrachenkov, K. and Litvak, N. and Nemirovsky, D. and Osipova, N.},
+	year = {2007},
+	note = {Publisher: Society for Industrial and Applied Mathematics},
+	pages = {890--904},
+}
+
+@article{avrachenkov_monte_2007-1,
+	title = {Monte {Carlo} {Methods} in {Pagerank} {Computation}: {When} {One} {Iteration} {Is} {Sufficient}},
+	volume = {45},
+	issn = {0036-1429},
+	shorttitle = {Monte {Carlo} {Methods} in {Pagerank} {Computation}},
+	url = {https://www.jstor.org/stable/40232890},
+	abstract = {PageRank is one of the principle criteria according to which Google ranks Web pages. PageRank can be interpreted as a frequency of visiting a Web page by a random surfer, and thus it reflects the popularity of a Web page. Google computes the PageRank using the power iteration method, which requires about one week of intensive computations. In the present work we propose and analyze Monte Carlo-type methods for the PageRank computation. There are several advantages of the probabilistic Monte Carlo methods over the deterministic power iteration method: Monte Carlo methods already provide good estimation of the PageRank for relatively important pages after one iteration; Monte Carlo methods have natural parallel implementation; and finally, Monte Carlo methods allow one to perform continuous update of the PageRank as the structure of the Web changes.},
+	number = {2},
+	urldate = {2025-04-20},
+	journal = {SIAM Journal on Numerical Analysis},
+	author = {Avrachenkov, K. and Litvak, N. and Nemirovsky, D. and Osipova, N.},
+	year = {2007},
+	note = {Publisher: Society for Industrial and Applied Mathematics},
+	pages = {890--904},
+}
+
+@misc{franziska_schobel_marathon_2025,
+	title = {{MARATHON} {VORBEREITUNGEN}: {Koffer} packen, {Gedanken} über {Schönheitsideale}, {Paris} {Vibes} + neue {Laufweste}},
+	shorttitle = {{MARATHON} {VORBEREITUNGEN}},
+	url = {https://www.youtube.com/watch?v=czY3BOKUS2c},
+	urldate = {2025-04-15},
+	author = {{Franziska Schöbel}},
+	month = apr,
+	year = {2025},
+}
+
 @inproceedings{weng_twitterrank_2010,
 	address = {New York, NY, USA},
 	series = {{WSDM} '10},
@@ -293,7 +403,7 @@
 	pages = {54--65},
 }
 
-@article{avrachenkov_monte_2007,
+@article{avrachenkov_monte_2007-2,
 	title = {Monte {Carlo} {Methods} in {Pagerank} {Computation}: {When} {One} {Iteration} {Is} {Sufficient}},
 	volume = {45},
 	issn = {0036-1429},
