--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 % Title Formatting
 \titleformat{\section}{\large\bfseries}{\thesection}{1em}{}
 
-\title{Memory Efficient Efficient PageRank on Apache Spark}
+\title{Memory Efficient PageRank on Apache Spark}
 \author{Nina Michalek\\TU Berlin, DOS}
 \date{April 7, 2025}
 
@@ -31,7 +31,7 @@ To analyze these, numerous graph algorithms have been proposed. Among the most i
  
 
 \section{Problem Description}
-The rapid expansion of the World Wide Web during the late 1990's presented a significant challenge for the information retrieval cite. With the launch of Google in 1998 cite, PageRank was introduced as a core component of the search engine cite. PageRank is an algorithm that is ranking web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The node of the graph are the web pages while the edges represent links. An outedge is a link on a website and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all pages linking to it. Linking pages pass a fraction of its own value, proportional to its number of outedges, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}. 
+The rapid expansion of the World Wide Web during the late 1990's presented a significant challenge for the information retrieval cite. With the launch of Google in 1998 cite, PageRank was introduced as a core component of the search engine cite. PageRank is an algorithm that is ranking web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The nodes of the graph are the web pages while the edges represent links. An outedge is a link on a website and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all pages linking to it. Linking pages pass a fraction of its own value, proportional to its number of outedges, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}. 
 Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}. Despite its wide applicability, a fundamental challenge lies in the graph representation \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory, where $n$ is the number of web pages \cite{wu_efficient_2024}. The transition matrix, containing the probabilities of moving from one web page to another in a single step, presents a significant memory challenge as graph sizes grow. 
 
 %The transition matrix stores the probabilities of moving from one web page to another in one single step. It becomes a significant memory bottleneck as the size of the graph increases, making it impractical to directly store or process the entire graph. GraphX's PageRank comes with a static and a dynamic version \cite{xin_graphx_2013}. Static PageRank runs for a fixed number of iterations, while dynamic PageRank runs until the ranks converge \cite{xin_graphx_2013}. Both implementations use power iteration to update values \cite{xin_graphx_2013}, which requires many passes over the graph, resulting in expensive matrix operations. % A fundamental challenge lies in the graph representation itself \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory \cite{wu_efficient_2024}. The transition matrix becomes a significant memory bottleneck as the size of the graph increases, making it impractical to directly store or process the entire graph. Therefore, efficient models that avoid full matrix construction and instead rely on approximations are needed \cite{liu_fast_2015}.
@@ -40,7 +40,16 @@ Today PageRank is used, not only in search engines, but in a wide range of appli
 
 
 \section{State of the Art}
-Today there are numerous approximate PageRank implementations that address the computational overhead in the original implementation  \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms estimate node importance by simulating random walks over the graph \cite{avrachenkov_monte_2007}. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph \cite{wu_approxrank_2009}\cite{bar-yossef_local_2008}. Sampling algorithms estimate the importance of a node by it's local area. Although this approach achieves a better runtime than other algorithms, the memory consumption is similar. Finally, matrix approximation-based PageRank algorithms reduce the rank of the matrix to simplify computations \cite{liu_fast_2015}. This results in faster computing time but usually the construction of low-rank matrices is high . Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{xin_graphx_2013}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_2014-1}, it has several limitations. Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
+Numerous approaches such as Apache Spark's GraphX framework \cite{xin_graphx_2013} have been introduced to address the computational overhead in the standard power iteration algorithm  \cite{page_pagerank_1999}.
+GraphX uses a vertex-centric model strongly inspired by Pregel \cite{malewicz_pregel_2010} that partitions the graph across a cluster to allow efficient distributed communication and state updates. It improves the  performance over general purpose dataflow systems \cite{jin_software_2022}. However, GraphX's PageRank still encounters limitations on massive graphs including significant memory requirements for storing the graph structure \cite{wu_efficient_2024}\cite{xin_graphx_2014}. Therefore, approximate PageRank algorithms have been proposed for practical large-scale analysis, trading off accuracy for efficiency \cite{wu_efficient_2024}. 
+\textbf{Iteration methods} \cite{xie_parameterized_2023}\cite{anikin_efficient_2022} accelerate the standard power iteration but still operate on the entire graph structure \cite{wu_efficient_2024}. 
+\textbf{Sampling-based methods} estimate PageRank values by using smaller, sampled subgraphs \cite{bar-yossef_local_2008}\cite{chen_local_2004}. Although they reduce the input data size, these methods can not estimate the PageRank values for those vertices outside the sampled set \cite{wu_efficient_2024}.
+\textbf{Matrix approximation methods} use a low-rank approximated transition matrix to estimate PageRank values \cite{liu_fast_2015}\cite{benczur_feasibility_2005}. 
+\textbf{Monte Carlo methods} estimate PageRank by simulating random walks on the graph. Instead of iteratively updating a full rank vector, these models simulate numerous random walks on the graph \cite{avrachenkov_monte_2007}. The PageRank of a vertex can be estimated from the proportion of walks terminating at that vertex (endpoint sampling) or the frequency of visits during the walks. The memory during simulation can be controlled by the number of walkers not needing to scale the number of nodes. This presents a potential advantage for memory usage compared to storing and updating the full rank PageRank vector iteratively. 
+
+
+
+%They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms estimate node importance by simulating random walks over the graph \cite{avrachenkov_monte_2007}. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph \cite{wu_approxrank_2009}\cite{bar-yossef_local_2008}. Sampling algorithms estimate the importance of a node by it's local area. Although this approach achieves a better runtime than other algorithms, the memory consumption is similar. Finally, matrix approximation-based PageRank algorithms reduce the rank of the matrix to simplify computations \cite{liu_fast_2015}. This results in faster computing time but usually the construction of low-rank matrices is high . Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{xin_graphx_2013}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_2014-1}, it has several limitations. Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
  
 
 \section{Approach}
@@ -55,7 +64,7 @@ After the implementation of a state of the art approach, the setup will be evalu
 
 
 
-\section{References}
+
 \bibliographystyle{plain}  % Choose a citation format
 \bibliography{references}   % Link to your BibTeX file
 
