--- a/references-2.bib
+++ b/references-2.bib
@@ -21,3 +21,15 @@
     year = {2013},
     pages = {1--6},
 }
+@misc{page_pagerank_1999,
+    type = {Techreport},
+    title = {The {PageRank} {Citation} {Ranking}: {Bringing} {Order} to the {Web}.},
+    shorttitle = {The {PageRank} {Citation} {Ranking}},
+    url = {http://ilpubs.stanford.edu:8090/422/?utm_campaign=Technical%20SEO%20Weekly&utm_medium=email&utm_source=Revue%20newsletter},
+    abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.},
+    urldate = {2025-04-04},
+    author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
+    month = nov,
+    year = {1999},
+    note = {Publisher: Stanford InfoLab},
+}
