--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 
 \title{Memory Efficient PageRank on Apache Spark}
 \author{Nina Michalek\\TU Berlin, DOS}
-\date{April 24, 2025}
+\date{April 25, 2025}
 
 \begin{document}
 
@@ -27,11 +27,11 @@
 
 \section{Introduction}
  Graphs are widely used to represent relationships between different entities for applications such as social networks and website connections \cite{zhang_distributed_2021}. 
-To analyze these, numerous graph algorithms have been proposed \cite{malewicz_pregel_2010}\cite{low_distributed_2012}\cite{koch_empirical_2016}. Among the most influential is PageRank \cite{page_pagerank_1999}, an iterative algorithm introduced by Google to determine website importance. PageRank has become a common component within specialized graph processing frameworks. These systems are designed to efficiently execute iterative algorithms, making graph analytics more practical. An example of such a system is GraphX \cite{xin_graphx_2013}, built upon Apache Spark \cite{xin_graphx_2013}. Spark itself is a popular open source distributed dataflow system that enables large-scale data processing \cite{shanahan_large_2015}. GraphX acts as a graph processing framework that aims to bridge the gap between system-level optimisations in specialised graph engines and the flexible dataflow operations available in general-purpose systems \cite{jin_software_2022}. However, recent research has addressed the huge memory overhead in GraphX's PageRank algorithm due to the data representation. It proposes approximate computation to reduce memory consumption \cite{wu_efficient_2024}. 
+To analyze these, numerous graph algorithms have been proposed \cite{malewicz_pregel_2010}\cite{low_distributed_2012}\cite{koch_empirical_2016}. Among the most influential is PageRank \cite{page_pagerank_1999}, an iterative algorithm introduced by Google to determine website importance. PageRank has become a common component within specialized graph processing frameworks. These systems are designed to efficiently execute iterative algorithms, making graph analytics more practical. An example of such a system is GraphX \cite{xin_graphx_2013}, built upon Apache Spark \cite{xin_graphx_2013} a popular open-source distributed dataflow system that that enables large-scale data processing \cite{shanahan_large_2015}. GraphX acts as a graph processing framework that aims to bridge the gap between system-level optimisations in specialised graph engines and the flexible dataflow operations available in general-purpose systems \cite{jin_software_2022}. However, recent research has addressed the huge memory overhead in GraphX's PageRank algorithm due to the data representation and proposes approximate computation to reduce memory consumption \cite{wu_efficient_2024}. 
  
 
 \section{Problem Description}
-The rapid expansion of the World Wide Web in the late 1990s posed a significant challenge to information retrieval \cite{page_pagerank_1999}. With the launch of Google in 1998, PageRank was introduced as a core component of the search engine \cite{page_pagerank_1999}. PageRank is an algorithm that ranks web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The nodes of the graph are the web pages, while the edges represent links. An outedge is a link on a page and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all the pages that link to it. Linking pages pass a fraction of their own value, proportional to their number of outbound links, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}.
+The rapid expansion of the World Wide Web in the late 1990s posed a significant challenge to information retrieval as millions of pages made finding relevant and authoritative information increasingly difficult \cite{page_pagerank_1999}. With the launch of Google in 1998, PageRank was introduced as a core component of the search engine \cite{page_pagerank_1999}. PageRank is an algorithm that ranks web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The nodes of the graph are the web pages, while the edges represent links. An outedge is a link on a page and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all the pages that link to it. Linking pages pass a fraction of their own value, proportional to their number of outbound links, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}.
 Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}. Despite its wide applicability, a fundamental challenge lies in the graph representation \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory, where $n$ is the number of web pages \cite{wu_efficient_2024}. The transition matrix, containing the probabilities of moving from one web page to another in a single step, presents a significant memory challenge as graph sizes grow. 
 
 
@@ -40,7 +40,7 @@ Today PageRank is used, not only in search engines, but in a wide range of appli
 Numerous approaches, such as Apache Spark's GraphX framework \cite{xin_graphx_2013}, have been introduced to address the memory overhead of the standard power iteration algorithm \cite{page_pagerank_1999}.
 GraphX uses a vertex-centric model, strongly inspired by Pregel \cite{malewicz_pregel_2010}, which partitions the graph across a cluster to allow efficient distributed communication and state updates. It improves performance over general-purpose dataflow systems \cite{jin_software_2022}. However, GraphX's PageRank still has limitations on massive graphs, including significant memory requirements for storing the graph structure \cite{wu_efficient_2024}\cite{xin_graphx_2014}. Therefore, approximate PageRank algorithms have been proposed for practical large-scale analysis that trade off accuracy for efficiency \cite{wu_efficient_2024}. The following methods have been introduced:
 \textbf{Iteration methods} \cite{xie_parameterized_2023-1}\cite{anikin_efficient_2022} accelerate the standard power iteration but still operate on the whole graph structure \cite{wu_efficient_2024}. 
-\textbf{Sampling-based methods} estimate PageRank values by using smaller, sampled subgraphs \cite{bar-yossef_local_2008}\cite{chen_local_2004}. Although they reduce the size of the input data, these methods cannot estimate the PageRank values for the vertices outside the sampled set \cite{wu_efficient_2024}.
+\textbf{Sampling-based methods} estimate PageRank values by using smaller, sampled subgraphs \cite{bar-yossef_local_2008}\cite{chen_local_2004}. Despite reducing the size of the input data, these methods cannot estimate the PageRank values for the vertices outside the sampled set \cite{wu_efficient_2024}.
 \textbf{Matrix approximation methods} use a low-rank approximated transition matrix to estimate PageRank values \cite{liu_fast_2015}\cite{benczur_feasibility_2005}. 
 \textbf{Monte Carlo methods} estimate PageRank by simulating random walks on the graph. Instead of iteratively updating a full rank vector, these models simulate many random walks on the graph \cite{avrachenkov_monte_2007}. The value of a node is estimated by the number of walks that end at the vertex. In order to achieve high accuracy, these methods have to go through a large number of iterations \cite{wu_efficient_2024}. However, the memory required during the simulation can be controlled by the number of concurrent random walkers rather than by the total number of vertices \cite{avrachenkov_monte_2007}. Given the potential memory advantages by controlling the random walker count, Monte Carlo methods offer a promising direction for large-scale PageRank approximation.
  
