--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
  Graphs are widely used to represent relationships between different entities for applications such as social networks and website links \cite{zhang_distributed_2021}. 
 A wide range of graph algorithms have been developed to analyse these structures. \cite{malewicz_pregel_2010}\cite{low_distributed_2012}\cite{koch_empirical_2016}. Among the most influential is PageRank \cite{page_pagerank_1999}, an iterative algorithm introduced by Google to determine the importance of websites. Faced with the challenge of information retrieval posed by the rapid expansion of the World Wide Web in the late 1990s, PageRank provided a method of ranking web pages by measuring their relative importance based on the graph of the web. In this graph, the nodes are the web pages, while the edges represent links. An outedge is a link on a page and an inedge is a backlink. The core idea is that a page is considered important if it has inedges from important pages.\par
 The PageRank value of a web page is calculated iteratively based on the values of all the pages that link to it. Linking pages pass on a fraction of their own value, proportional to their number of outbound links, to the target page. This calculation includes a damping factor that converges to a stable probability distribution, effectively representing the probability that a random user will end up on a particular page.
-Today, PageRank is used not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter uses PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}.\par
+Today, PageRank is used not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. These networks use PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}.\par
 Despite its wide applicability, a fundamental challenge lies in the representation of graphs \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory, where $n$ is the number of web pages \cite{wu_efficient_2024}. The transition matrix, which contains the probabilities of moving from one web page to another in a single step, presents a significant memory challenge as graph sizes grow.\par
 To meet the demands of graph analytics, specialised graph processing frameworks have been introduced. These systems are designed to efficiently execute iterative algorithms, making graph analytics more practical. An example of such a system is GraphX \cite{xin_graphx_2013}, which is based on Apache Spark \cite{xin_graphx_2013}, a popular open source distributed dataflow system that enables large-scale data processing \cite{shanahan_large_2015}. GraphX acts as a graph processing framework that aims to bridge the gap between system-level optimisations in specialised graph engines and the flexible dataflow operations available in general-purpose systems \cite{jin_software_2022}. However, even with such frameworks, the memory consumption of algorithms such as PageRank can be enormous. Therefore, recent research has attempted to address the memory overhead in GraphX's PageRank algorithm due to the data representation, and proposes approximate computation to reduce memory consumption \cite{wu_efficient_2024}. 
 
