--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 
 \title{Memory-efficient PageRank on Apache Spark\\ via Random Walks}
 \author{Nina Michalek\\TU Berlin, DOS}
-\date{May 6, 2025}
+\date{May 13, 2025}
 
 \begin{document}
 
@@ -54,7 +54,7 @@ GraphX uses a vertex-centric model, strongly inspired by Pregel \cite{malewicz_p
 \section{Approach}
 The goal of this thesis is to implement a memory-efficient alternative to GraphX's iterative PageRank computation by using a Monte Carlo method in Apache Spark. The aforementioned memory advantage of Monte Carlo methods provides an approach that achieves lower peak memory consumption compared to GraphX's power iteration on the whole graph. Especially when processing large graphs. A trade-off between accuracy and performance due to memory constraints is accepted. 
 The implementation uses RDDs (Resilient Distributed Datasets) to represent the graph structure and the dynamic states of concurrent random walkers. The simulation computes the next position for each walker over a given number of steps (k). In each step, the current walker state RDD is joined with the persisted graph structure RDD to determine available transitions. The PageRank random surfer model is then applied using standard Spark transformations. In this model each walker either follows a randomly selected outgoing link with probability d (damping factor) or teleports to a random node with probability 1-d. Dangling nodes are handled appropriately within the step. To manage memory effectively throughout the simulation, the RDD representing the previous walker state is explicitly unpersisted after the new state RDD is computed and persisted in each step. Finally, the PageRank scores are estimated based on the final walker states. The number of walkers and the step size have a direct impact on memory consumption and performance. The thesis evaluates the trade-offs by varying the number of walkers and the step size. The memory consumption, execution times and accuracy will be benchmarked against GraphX's PageRank implementation. \par
-A variety of graph datasets will be used to develop and evaluate the methods. In addition to real-world data sets such as web graphs, social networks and citation networks, synthetic graphs enable a more systematically analysis of our methods. Different graph sizes will be considered to show the performance of the methods as graph size increases. Ideally, large graphs that strain the standard GraphX PageRank implementation should be included. 
+A variety of graph datasets will be used to develop and evaluate the methods. In addition to real-world data sets such as web graphs, social networks and citation networks, synthetic graphs enable a more systematically analysis of the methods. Different graph sizes will be considered to show the performance of the methods as graph size increases. Ideally, large graphs that strain the standard GraphX PageRank implementation should be included. 
 
 
 
